--- a/DataAnalytics/backend/.env
+++ b/DataAnalytics/backend/.env
@@ -1,7 +1,7 @@
 PG_HOST=localhost
+PG_PORT=5432
+PG_DBNM=V1
 PG_USER=admin
 PG_PASS=admin
-PG_DBNM=V1
-PG_PORT=5432
-API_PORT=:8001
+API_PORT=8001
 SECRET_KEY=secret
