--- a/DataAnalytics/deployment/frontend/Dockerfile
+++ b/DataAnalytics/deployment/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # $ docker build -t client .
-# $ $ docker run -p 192.168.9.97:3002:3002 --network=host --env HTTPS_PROXY="https://192.168.9.97:443" --env HTTP=true --env SSL_CRT_FILE=ssl.crt --env SSL_KEY_FILE=ssl.key client
+# $ docker run -p 192.168.9.97:3002:3002 --network=host --env HTTPS=true
 
 FROM node:alpine
 
@@ -7,9 +7,7 @@ RUN mkdir /app
 
 WORKDIR /app
 
-COPY package.json package-lock.json ./
-
-RUN ls -l /app
+COPY package*.json ./
 
 RUN npm install --legacy-peer-deps
 
@@ -17,12 +15,16 @@ COPY . ./
 
 RUN ls -l /app
 
-ENV HTTPS_PROXY="https://192.168.9.97:443"
+RUN rm -r ssl && mkdir ssl
+
+COPY ./ssl/ssl.* ./ssl/
+
+#ENV HTTPS_PROXY="https://192.168.9.97:443"
 
 ENV HTTPS=true
 
-ENV SSL_CRT_FILE=ssl.crt
+ENV SSL_CRT_FILE=/app/ssl/ssl.crt
 
-ENV SSL_KEY_FILE=ssl.key
+ENV SSL_KEY_FILE=/app/ssl/ssl.key
 
 CMD ["npm", "start"]
