--- a/DataAnalytics/frontend/.gitignore
+++ b/DataAnalytics/frontend/.gitignore
@@ -1,7 +1,5 @@
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
 # testing
 /coverage
@@ -9,7 +7,7 @@
 # production
 /build
 
-/node_modules
+package-lock.json
 
 # misc
 .env
